# paperscraperMCP

./: .mcp.json  README.md  README_MCP.md  mcp_config.json  mcp_server_standalone.py  mcp_server_wrapper.py  pyproject.toml  run_mcp_server.py  start_mcp.py  test_mcp.py  test_mcp_connection.py  test_mcp_schemas.py
paperscraper/: __init__.py  load_dumps.py  mcp_clean.py  mcp_server.py
