[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperscraper"
version = "0.3.2"
description = "Package to scrape papers with MCP support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jannis Born", email = "jannis.born@gmx.de"},
    {name = "Matteo Manica", email = "drugilsberg@gmail.com"}
]
keywords = [
    "Academics",
    "Science", 
    "Publication",
    "Search",
    "PubMed",
    "Arxiv",
    "Medrxiv",
    "Biorxiv", 
    "Chemrxiv",
    "Google Scholar",
    "MCP",
    "Model Context Protocol"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "arxiv>=1.4.2",
    "pymed-paperscraper>=1.0.4", 
    "pandas",
    "requests",
    "tqdm",
    "scholarly>=1.0.0",
    "seaborn",
    "matplotlib",
    "matplotlib_venn",
    "bs4",
    "impact-factor>=1.1.1",
    "thefuzz",
    "pytest", 
    "tldextract",
    "semanticscholar",
    "pydantic",
    "unidecode",
    "python-dotenv",
    "boto3"
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0"
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/jannisborn/paperscraper"
Repository = "https://github.com/jannisborn/paperscraper"
Issues = "https://github.com/jannisborn/paperscraper/issues"

[project.scripts]
paperscraper-mcp = "paperscraper.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paperscraper*"]

[tool.setuptools.package-data]
"paperscraper.server_dumps" = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.pytest.ini_options]
testpaths = ["paperscraper/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"